--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html> 
 <html>
 <head>
+<meta name="google-site-verification" content="pk_k_VkOIkBNEBfd4U-kWF0PLw66ZF7PU8C9h7JrmeA" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>110570036陳淑晴作業2</title>
 <meta name="description" content="這個網站是110570036陳淑晴作業2，内容是各種CSS的練習" />
